<resources>
    <string name="app_name">صيدليتي</string>
    <string name="login">تسجيل  الدخول</string>
    <string name="sinup">انشاء حساب</string>
    <string name="app_des">تطبيق طبي يساعد على ايجاد ما تحتاجه من علاج و أدوية بطريقة سهلة</string>
    <string name="hello">مرحبا أنس</string>
    <string name="location">رام الله، بيت عور الفوقا</string>
    <string name="search"> ابحث عن الدواء او المنتجات الأخرى</string>
    <string name="finish_order_title">تمت عملية الشراء</string>
    <string name="finish_order_dis">سيصلك اشعار عندما يتم تسليم المنتجات لك</string>
    <string name="finish">تهانينا</string>
    <string name="finish1">تم تأكيد طلبك بنجاح</string>
    <string name="back_to_main">العودة الى الصفحة الرئيسية</string>
    <string name="view_all">عرض الكل</string>
    <string name="cat">الأقسام</string>
    <string name="items">المنتجات الشائعة</string>
    <string name="des">الوصف :</string>
    <string name="item_name">بانادول</string>
    <string name="item_num">10 أقراص</string>
    <string name="item_price">60 شيكل</string>
    <string name="num">10</string>
    <string name="discreption">لعلاج البرد والرشخ والزكام - 20 قرص</string>
    <string name="profile">الحساب الشخصي</string>
    <string name="name">الاسم : </string>
    <string name="phone_number">رقم الهاتف : </string>
    <string name="locatn">الموقع : </string>
    <string name="email">الايميل : </string>
    <string name="user">anas_tb</string>

    <string name="user_name">أنس طليب</string>

    <!--Titles for intro-->
    <string name="first_slide_title">عرض وشراء الأدوية عبر الإنترنت</string>
    <string name="second_slide_title">توفير الرعاية الطبية والصحية</string>
    <string name="third_slide_title">خدمة توصيل سريعة وخصومات لامتناهية</string>

    <!--Descriptions-->
    <string name="first_slide_desc">ابحث عن اسم الدواء الذي تريد أو احصل على العلاج الخاص بك عن طريق تصوير الروشيتة</string>
    <string name="second_slide_desc">احصل على الدواء الذي تريده واشتره بكل سهولة وأمان بضغطة زر</string>
    <string name="third_slide_desc">
توصيل سريع للأدوية وخصومات مجزية على الأسعار. هذه الخدمة توفر لك الراحة والتوفير في الوقت والجهد، مع إمكانية شراء الأدوية بكل سهولة وأمان من مكانك واستلامها في وقت قصير.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="edit_profile_email">البريد الالكتروني</string>
    <string name="edit_profile_password">كلمة المرور</string>
    <string name="edit_profile_location">العنوان</string>
    <string name="edit_profile_savebtn">حفظ</string>
    <string name="edit_profile_title">تعديل الحساب</string>
    <string name="a_button_to_add_an_image">a button to add an image</string>
    <string name="backarrow_icon">backarrow icon</string>
    <string name="edit_profile_phone">رقم الهاتف</string>
    <string name="edit_profile_name">الاسم</string>

</resources>