<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutmain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/bac_main"
        android:elevation="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_item_cardview"
        android:gravity="center|right"
        android:hint="@string/edit_profile_name"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImg"
        tools:fontFamily="@font/monadi"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_item_cardview"
        android:fontFamily="@font/monadi"
        android:gravity="center|right"
        android:hint="@string/edit_profile_phone"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_item_cardview"
        android:fontFamily="@font/monadi"
        android:gravity="center|right"
        android:hint="@string/edit_profile_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_name"
        app:layout_constraintTop_toBottomOf="@+id/editText_name"
        tools:ignore="TouchTargetSizeCheck"
        tools:textSize="14sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_item_cardview"
        android:fontFamily="@font/monadi"
        android:gravity="center|right"
        android:hint="@string/edit_profile_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_phone"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone"
        tools:ignore="TouchTargetSizeCheck"
        tools:textSize="14sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText_adress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_item_cardview"
        android:fontFamily="@font/monadi"
        android:gravity="center|right"
        android:hint="@string/edit_profile_location"
        android:padding="10dp"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        tools:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/gradient_color"
        android:fontFamily="@font/monadi"
        android:text="@string/edit_profile_savebtn"
        android:textColor="@color/whitedark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_adress"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/monadi"
        android:text="@string/edit_profile_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userImg"
        app:layout_constraintEnd_toEndOf="@+id/userImg"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/userImg"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.297" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="42dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:background="@drawable/round_button"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/userImg"
        app:layout_constraintStart_toStartOf="@+id/userImg"
        app:layout_constraintTop_toTopOf="@+id/userImg"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/photo_32"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:contentDescription="@string/a_button_to_add_an_image" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="519dp"

        android:src="@drawable/anas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="@color/whitedark"
        app:strokeWidth="1dp"
        tools:elevation="2dp" />

    <ImageView
        android:id="@+id/iv_backArrow"
        android:layout_width="39dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="457dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/arrow"
        android:contentDescription="@string/backarrow_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>